# hamsaz-raft

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
bench/: bench.py  bench_multiclient.py  bench_multiclient_external.py  plot_compare.py  plot_repro_compare.py  run_matrix.py
deploy/k8s/: raft-headless-service.yaml  raft-statefulset.yaml
proto/: operation.proto
repro/3node-external/: README.md
scripts/: persistence_smoke.py  repro_3node_external.sh  run_bench_compare.sh  run_bench_docker.sh  run_bench_k8s.sh  run_three_node_udp.sh  run_two_node.sh  start_node_server.sh
src/analysis/: CoursewareAnalysis.cpp  CoursewareAnalysis.hpp  Method.hpp
src/common/: OperationCodec.cpp  OperationCodec.hpp  SnapshotCodec.cpp  SnapshotCodec.hpp
src/domain/: CoursewareState.cpp  CoursewareState.hpp
src/main/: cli.cpp  raft_node_cli.cpp  raft_node_server.cpp
src/raft/: FileStateMgr.hpp  RaftNode.cpp  RaftNode.hpp  StateMachine.cpp  StateMachine.hpp
src/runtime/: DependencyTracker.cpp  DependencyTracker.hpp  GossipEngine.cpp  GossipEngine.hpp  GossipHub.cpp  GossipHub.hpp  Operation.hpp  OperationRouter.cpp  OperationRouter.hpp  ReplicatedObject.cpp  ReplicatedObject.hpp
tests/bench/: gossip_simulator.cpp
tests/integration/: test_end_to_end.cpp
tests/raft/: harness_demo.cpp  harness_failover.cpp
tests/unit/: test_analysis_runtime.cpp  test_courseware_state.cpp  test_errors.cpp  test_operation_codec.cpp  test_snapshot_codec.cpp
